# realtime_ingestion_patterns

./: README.md  databricks.yml  pyproject.toml
app/: app.yaml  lakebase.py  main.py  models.py  requirements.txt  sql_warehouse.py
app/routers/: __init__.py  assets.py  demo.py  health.py  traffic.py  traffic_lakebase.py
app/static/: demo.html
data/sample/: webtris_daily_sample.json
diagrams/: architecture_comparison.mmd  sequence_data_flow.mmd
docs/: latency-breakdown.md
notebooks/: run_eventhub_pipeline.py  run_medallion_pipeline.py  run_reference_loader.py  run_rtm_pipeline.py  run_streaming_pipeline.py  run_traffic_fetcher.py
resources/: nh_eventhub_streaming_job.yml  nh_medallion_streaming_job.yml  nh_reference_ingest_job.yml  nh_rtm_streaming_job.yml  nh_streaming_job.yml  nh_traffic_pipeline.yml
setup/: create_zerobus_table.sql  deploy.sh
src/nh_dataflows/: __init__.py  config.py
src/nh_dataflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nh_dataflows/geospatial/: __init__.py
src/nh_dataflows/ingestion/: __init__.py  schemas.py  webtris_client.py  webtris_fetcher.py
src/nh_dataflows/pipelines/: __init__.py  bronze.py  expectations.py  gold.py  silver.py
tests/integration/: test_pipeline_expectations.py
tests/unit/: test_h3_utils.py  test_schemas.py  test_webtris_client.py
