[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nh-dataflows"
version = "0.1.0"
description = "National Highways real-time traffic data pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "databricks-sdk>=0.36",
    "databricks-zerobus-ingest-sdk>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "respx>=0.22",
]
app = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401", "N812"]

[tool.ruff.lint.per-file-ignores]
"src/nh_dataflows/pipelines/*.py" = ["ANN201"]
"src/nh_dataflows/streaming/*.py" = ["ANN201"]

[tool.ruff.lint.isort]
known-first-party = ["nh_dataflows"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
